<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/gray_light">

    <TextView
        android:id="@+id/tv_create_tagg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/create_tagg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_tagg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_hint_tagg"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:inputType="textCapSentences"
        android:textColorHint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_tagg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_chose_color"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_chose_color"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_chose_color"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_tagg_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>